# Flam_RnD_Assignment

Flam_RnD_Assignment/: FINAL_SUBMISSION.md  README.md  settings.gradle
Flam_RnD_Assignment/app/: build.gradle
Flam_RnD_Assignment/app/src/main/: AndroidManifest.xml
Flam_RnD_Assignment/app/src/main/java/com/example/flamrnd/: MainActivity.kt
Flam_RnD_Assignment/app/src/main/res/layout/: activity_main.xml
Flam_RnD_Assignment/app/src/main/res/values/: strings.xml  themes.xml
Flam_RnD_Assignment/gl/: EdgeRenderer.kt
Flam_RnD_Assignment/jni/: CMakeLists.txt  flam_native.cpp
Flam_RnD_Assignment/web/: package.json  tsconfig.json
Flam_RnD_Assignment/web/public/: index.html
Flam_RnD_Assignment/web/src/: index.ts
